# terrain_ai_system

./: .auto_launch_env.sh.swp  CMakeLists-no dem.txt  CMakeLists.txt  app.py  auto_launch_env.sh  auto_launch_env.sh.save  cqdem.tif.aux.xml  custom_map_tools.cpp  custom_map_tools.h  main-1.cpp  main.cpp  mainwindow- archive.cpp  mainwindow-1.cpp  mainwindow-del.cpp  mainwindow-no dem.cpp  mainwindow.cpp  mainwindow.h  paste.txt  requirements.txt  tmp.txt
.devcontainer/: devcontainer.json
